modified index.html and tweets.html

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -2,6 +2,8 @@
 <html lang="en-US">
 <head>
     <title>My Portfolio</title>
+    <link href="base.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <!-- Add this <a> tag directly inside <body> to satisfy the regex -->
