--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
+<head>
         <title>My Portfolio</title>
+        <link href="base.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
