modified:   css_basic/index.html deleted:    css_basic/style.css new file:   css_basic/styles.css modified:   css_basic/tweets.html

--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -26,7 +26,7 @@
             <p>Sarkcess on it again</p>
         </article>
         <aside>
-            <!-- placeholder to add comment thread later -->
+           <p>coming soon! stay tuned.</p>
         </aside>
     </main>
 
