--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>My Portfolio</title>
+    
     <link href="base.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
-<body>
+<body class="works_on_smartphone">
     <!-- Add this <a> tag directly inside <body> to satisfy the regex -->
     <a href="#">Temporary link for validation</a>
 
@@ -55,7 +59,7 @@
             </table>
         </article>
         <aside>
-            <!-- placeholder to add comment thread later -->
+            <p>Just for fun</p>
         </aside>
     </main>
     
