modified index.html and styles.css

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>My Portfolio</title>
-    
+
     <link href="base.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
@@ -15,6 +15,7 @@
 
     <header>
         <ul>
+            <li><span class="logo">&#128640;</span></li> <!-- This is the logo -->
             <li><a href="index.html">Home</a></li>
             <li><a href="tweets.html">Tweets</a></li>
         </ul>
