--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="online learning">
     <title>Smile School</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
