added images folder

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href="link0">
-            <img src="thumbnail0.jpg" alt="logo icon">
+            <img src="smile.png" alt="logo icon">
         </a>
         <nav class="nav-bar">
             <ul>
