--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="widht=device-width, initial-scale=1.0">
-    
+    <title>Headphones ALX PROJECT</title>
+    <link rel="stylesheets" href="styles.css">
 </head>
+<body>
+
+</body>
 </html>
