--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -1,12 +1,43 @@
 <!doctype html>
-<html lang="en-US">
+<html lang="zxx">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="widht=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Headphones ALX PROJECT</title>
-    <link rel="stylesheets" href="styles.css">
+    <link rel="stylesheet" href="0-styles.css">
 </head>
-<body>
 
+<body>
+    <section class="hero-section">
+        <header class="site-header">
+            <div class="logo">
+                <a href="0-index.html"><img src="images/logo_headphones.png" alt="logo" width="161" height="32"></a>
+            </div>
+
+            <nav>
+                <ul class="nav-list">
+                    <li><a href="#what-we-do" class="nav-link">what we do</a></li>
+                    <li><a href="our-results.html" class="nav-link">our results</a></li>
+                    <li><a href="contact-us.html" class="nav-link">contact us</a></li>
+                </ul>
+            </nav>
+        </header>
+
+       
+        <main class="hero-content">
+            <div class="hero-text">
+                    <h1 class="hero-title">Lorem ipsum dolor set amet lorem ipsum</h1>
+                    <p class="sub-title">Lorem ipsum dolor set amet lorem ipsum dolor set</p>
+
+                <div >
+                    <button class="button-container" type="button">CALL TO ACTION</button>
+                </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
+                    <p>labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco </p>
+                    <p>laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in </p>
+                    <p>voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            </div>
+        </main>
+    </section>
 </body>
 </html>
